--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ fieldset {
 
 /* Customizamos un poco la etiqueta <h1> y las clases que definimos para dar estilos particulares... */
 .h1-inicio {
-  margin: 0;
+  margin-top: 75px;
   font-size: 50px;
   font-family: 'Roboto', sans-serif;
   animation: swing;
@@ -115,7 +115,9 @@ iframe {
 
 /* A continuación armamos nuestro menu navegable... */
 header {
-  width: 100%; }
+  width: 100%;
+  position: fixed;
+  top: 0; }
 
 .bg-color {
   background-color: red; }
