--- a/scss/partials/_inicio.scss
+++ b/scss/partials/_inicio.scss
@@ -1,6 +1,6 @@
 /* Customizamos un poco la etiqueta <h1> y las clases que definimos para dar estilos particulares... */
 .h1-inicio{
-    margin: 0;
+    margin-top: 75px;
     font-size: 50px;
     font-family: 'Roboto', sans-serif;
     animation: swing;
