--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ fieldset {
   margin-top: 75px;
   font-size: 50px;
   font-family: 'Roboto', sans-serif;
+  text-decoration-line: underline;
   animation: swing;
   animation-duration: 1s; }
 
@@ -153,6 +154,7 @@ a {
 h1 {
   text-align: center;
   font-size: xx-large;
+  text-decoration-line: underline;
   font-family: 'Roboto', sans-serif;
   color: black;
   margin: 100px 50px 100px 50px;
