--- a/scss/partials/_inicio.scss
+++ b/scss/partials/_inicio.scss
@@ -3,6 +3,7 @@
     margin-top: 75px;
     font-size: 50px;
     font-family: 'Roboto', sans-serif;
+    text-decoration-line: underline;
     animation: swing;
     animation-duration: 1s;
 }
