--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -2,6 +2,7 @@
 h1{
     text-align: center;
     font-size: xx-large;
+    text-decoration-line: underline;
     font-family: 'Roboto', sans-serif;
     color: black;
     margin: 100px 50px 100px 50px;
