--- a/scss/partials/_contacto.scss
+++ b/scss/partials/_contacto.scss
@@ -1,8 +1,9 @@
+@import "../variables/variables";
+
 /* Comenzamos a darle estilo a nuestro formulario utilizando box modeling y Flex dentro de la etiqueta <fieldset>. */
 form{
     margin: 0 0 200px 300px;
-    width: 100%;
-    height: 500px;
+    @include sizes(100%, 500px);
 }
 fieldset{
     border: none;
@@ -14,12 +15,19 @@ fieldset{
     legend{
         font-size: x-large;
     }
-    label{
-        display: block;
+    div{
+        label{
+            display: block;
+        }
+        input{
+            padding: 10px 200px;
+            border: solid black;
+            border-radius: 10px;
+        }
     }
     input{
-        padding: 10px 60px;
-        border: solid  black;
+        padding: 10px 200px;
+        border: solid black;
         border-radius: 10px;
     }
 }
@@ -32,8 +40,6 @@ fieldset{
     border: solid 1px black;
 }
 .boton{
+    @extend .boton-limpiar;
     width: 320px;
-    color: white;
-    background-color: black;
-    border: solid 1px black;
 }
