--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -1,6 +1,8 @@
+@import "../variables/variables";
+
 /* Le damos estilo al <footer> utilizando una etiqueta y ademas los posicionamos donde queremos con el "position: absolute", utilizando el "relative" ya colocado en el <body> */
 .footer{
-    background-color: black;
+    background-color: map-get($estilos, color);
     color: white;
     bottom: 0%; 
     width: 100%;
