--- a/scss/partials/_menu.scss
+++ b/scss/partials/_menu.scss
@@ -1,3 +1,7 @@
+@import "../variables/variables";
+
+
+
 /* A continuación armamos nuestro menu navegable... */
 
 header{
@@ -26,14 +30,14 @@ a{
     display: inline-block;
     width: 150px;
     text-decoration: none;
-    color: black;
+    color: $color;
     font-size: medium;
     font-family: 'Roboto', sans-serif;
-    border: solid 2px black;
+    border: solid 2px $color;
     padding: 30px 40px 30px 40px;
     border-radius: 15px;
     &:hover{
-        background-color: black;
+        background-color: $color;
         color: white;
         transition: .6s;
         width: 180px;
